--- a/intelligentlogisticUI/package.json
+++ b/intelligentlogisticUI/package.json
@@ -11,11 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "axios": "^0.27.2",
     "echarts": "^3.8.5",
     "element-ui": "^2.15.7",
     "time-formater": "^1.0.1",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.10",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^2.3.1"
